Feature/processing (#4)
* add java processing operations

* add nodejs processing operations

* add elixir processing operations

* set default delay to 0
