# elixir/plug-cowboy/lib/plug_cowboy_app/controllers/crypt_controller.ex
@@ -1,0 +1,12 @@
+defmodule Controllers.CryptController do
+  import Services.Crypt
+  import Utils.DelayedTask
+  alias Models.LoopStatus
+  @moduledoc false
+
+  def hash(percentage, delay) do
+    times = start(&process/0, percentage, delay)
+    LoopStatus.ok(times > 0, times)
+  end
+
+end
