# java/spring-boot-tomcat/src/main/java/co/com/bancolombia/models/LoopStatus.java
@@ -1,0 +1,12 @@
+package co.com.bancolombia.models;
+
+import lombok.Builder;
+import lombok.Data;
+
+@Data
+@Builder
+public class LoopStatus {
+    private final String status;
+    private final boolean applied;
+    private final int times;
+}
