# nodejs/express/routes/crypt.js
@@ -1,0 +1,4 @@
+const {loopRoute} = require('../utils');
+const cryptService = require('../services/crypt');
+
+module.exports = loopRoute('/crypt', cryptService);
