# nodejs/express/routes/hash.js
@@ -1,0 +1,4 @@
+const {loopRoute} = require('../utils');
+const hashService = require('../services/hash');
+
+module.exports = loopRoute('/hash', hashService);
